2021-05-18  Karl Berry  <karl@freefriends.org>

	* usage.c (usagehelp): if bug_email arg ends in "@tug.org"
	also output the url for the mailing list.

2021-04-28  Marcel Fabian Krueger  <tex@2krueger.de>
	    Hironori KITAGAWA <h_kitagawa2001@yahoo.co.jp>
	    Karl Berry <karl@freefriends.org>

	* texmfmp.c (calledit): When looking for the filename to edit,
	skip \scantokens pseudo-files (streams 18 and 19) and indeed all
	name_field values <=255 (following tex.web), and token lists
	(state_field==0).
	
	Original reports from Don Hosek,
	https://tex.stackexchange.com/questions/594702
	and Hironori (plus patch),
	https://tug.org/pipermail/tex-k/2021-April/003542.html
	and Marcel (plus patch) for \scantokens,
	https://tug.org/pipermail/tex-live/2021-April/046846.html.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-12  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: Disable commands containing a character '|' for
	write18 in restricted mode for security.

2021-01-01  Akira Kakuto  <kakuto@w32tex.org>

	* printversion.c: Update copyright year.

2020-12-10  Akira Kakuto  <kakuto@w32tex.org>

	* lib.h: Definition of eof() contradicts corecrt_io.h
	in Visual Studio 2019.

2020-09-24  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: Call kpse_in_name_ok() in find_input_file() for
	getfilemoddate(), getfilesize(), getfiledump() and getmd5sum(),
	instead of in each separate routine. Doing it in the latter
	means we always check an absolute filename, and thus fail with
	openin_any=p. Original report from Adrian,
	https://tug.org/pipermail/tex-live/2020-September/046127.html

2020-08-28  Karl Berry  <karl@tug.org>

	* texmfmp.c (input_line): always clear errno before calling getc,
	else an EINTR errno might persist, masking a real EOF. On the other
	hand, loop as long as we have EOF && EINTR so we don't prematurely
	stop reading characters.
	https://tug.org/pipermail/tex-k/2020-August/003297.html

2020-07-18  Karl Berry  <karl@freefriends.org>
